lab1/Test/L1-A-11-12.cmm
int ;
int aFd 

int xdtS ( struct {
  struct AOYxw6lFRGn2i {
  }b3i0tZBi9TB5C70g6ikw 
  struct pIvvzPK RL0lMY1JxmzIwEGO ;
}_gF13dZ_Uo9z ) {
  struct {
    int JBPP2yvf2zp1 ;
    struct zX3tjomXS6xlwF EGYz6wIB ;
    struct F RRO 
  }ryPO1 ;
  float pRmLaTfmQ_CaVDM , mVp0X [ 287816346 ( ] ;
{
    int D7hklxkYk7KIMHJp = cUBU || HI8X1BbKR <= G42imjOJ6Ag6b06gXQ7J 
      * - ! kG ( AB_Y7SVPa , JqC = jteS3niheJOzaU6WMWY && 
      z == gZkwUiGDBv - ta9jyvIeH7alUs1qo / S36LMQt [ RLVc2pFiy30EpYf 
      || td3uqY6AvON3T98QEl0 && qqsS > PkEACQN [ U7f = V5TG 
      = TQiwoZTv != tiBpI_F64kHhO4utqW * YX8PA [ || - ! 
      ! ( gNGu2gjteRt < ( u9wkqJCzwaqYzqZKGml = y || ZcPSxhlOm 
      >= PTi60jLeYByOoL_d8 ) ) ] ] / 1328365477 * 676283153.1457894250 
      . O4aQLR5vjEhMr3d / egOMS8 ( ) ] . UQe3KGpuYNBSQ ) 
      + HQQhhIXXtP7QXzcH ;
  }}
int ieRqPa0 , PjoPyGwPzME 

;
int ;
int kNaQILyWEA396ZAiHV ( int OwiGf7zWFSe8M , int < 
  iIM3OlnMLO2g ) {
}
int qWrCFFSP ( ) {
  FocTM1T6SMeJy ;
  TQVh64WYeEDk1TcoX float ;
  pwEsFnS22liz9 ;
  y2 ;
  if ( hNYKEFopRbMVh )   while ( g )   if ( cB3S5uJoWNxnCh6 
    )   ir6zow ;
else   iRiXmCBF ;


else   if ( vow4wq9hITQ1NB7hgU if )   return gqfVpoVpGBuTywB6ayX7 
    ;


<= }
